<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CashPlus</string>
    <string name="cashplus_licence">Cashplus telah bekerja sama dengan PTD berlisensi <b>No 22/278/Cn/11</b></string>
    <string name="default_notification_channel_id">notification_channel_default</string>
    <string name="default_notification_channel_name">cashplus_notif</string>
    <string name="title_child"><![CDATA[Anak-Anak (< 17 years)]]></string>
    <string name="sk" tools:ignore="TypographyOther">
        \t\tSelamat datang di platform Cashplus yang dioperasikan oleh PT Amanah Antar Arta dan afiliasinya (secara sendiri-sendiri dan bersama-sama juga disebut "Cashplus" atau "kami"). Cashplus dengan serius bertanggung jawab berdasarkan peraturan perundang-undangan tentang privasi yang berlaku ("Undang-Undang Privasi") dan berkomitmen untuk menghormati hak dan masalah privasi semua Pengguna Platform Cashplus kami ("Platform") (secara bersama-sama kami menyebut Platform dan layanan yang kami sediakan sebagaimana yang dijelaskan dalam Situs kami sebagai "Layanan"). Kami mengakui pentingnya data pribadi yang telah Anda percayakan kepada kami dan percaya bahwa merupakan tanggung jawab kami untuk mengelola, melindungi dan mengolah data pribadi Anda dengan baik. Kebijakan Privasi ini ("Kebijakan Privasi" atau "Kebijakan") dirancang untuk membantu Anda memahami bagaimana kami mengumpulkan, menggunakan, mengungkapkan dan/atau mengolah data pribadi yang telah Anda percayakan kepada kami dan/atau kami miliki tentang Anda, baik di masa sekarang maupun di masa mendatang, serta untuk membantu Anda membuat keputusan yang tepat sebelum memberikan data pribadi Anda kepada kami.\n\n
        \t\tDengan menggunakan Layanan, mendaftarkan akun pada kami, mengunjungi Platform kami, atau mengakses Layanan, Anda mengakui dan setuju bahwa Anda menerima praktik, persyaratan, dan/atau kebijakan yang diuraikan dalam Kebijakan Privasi ini, dan Anda dengan ini mengizinkan kami untuk mengumpulkan, menggunakan, mengungkapkan dan/atau mengolah data pribadi Anda seperti yang dijelaskan di sini. APABILA ANDA TIDAK MENGIZINKAN PENGOLAHAN DATA PRIBADI ANDA SEPERTI YANG DIJELASKAN DALAM KEBIJAKAN PRIVASI INI, MOHON JANGAN MENGGUNAKAN LAYANAN KAMI ATAU MENGAKSES PLATFORM KAMI. Apabila kami mengubah Kebijakan Privasi kami, kami akan memposting perubahan tersebut atau Kebijakan Privasi yang telah diubah pada Platform kami. Kami berhak untuk mengubah Kebijakan Privasi ini setiap saat.\n\n
        \t\tKebijakan ini berlaku sehubungan dengan pemberitahuan lain, klausul kontrak, klausul persetujuan yang berlaku terkait dengan pengumpulan, penyimpanan, penggunaan, pengungkapan dan/atau pemrosesan data pribadi Anda oleh kami dan tidak dimaksudkan untuk mengesampingkan pemberitahuan atau klausul tersebut kecuali kami nyatakan sebaliknya.\n
    </string>
    <string name="approve_term_condition">Wajib menyetujui term condition</string>
    <string name="title_update_app">Pembaruan Cashplus</string>
    <string name="list_update_app_title">Daftar pembaruan versi %1$s</string>
    <string name="new_features">Fitur baru</string>
    <string name="improvement">Improvement</string>
    <string name="fix_bug">Perbaikan bug</string>
    <string name="login_with_password">Masuk dengan sandi</string>
    <string name="login_without_password">Masuk dengan OTP</string>
    <string name="login">Masuk</string>
    <string name="or">Atau</string>
    <string name="confirm_leave_cashplus">Yakin anda mau keluar dari aplikasi\ncashplus?</string>
    <string name="confirm_leave_edit_profile">Yakin anda mau meninggalkan halaman\nubah profil?</string>
    <string name="add_note">Tambah catatan</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">Riwayat</string>
    <string name="help">Bantuan</string>
    <string name="other_features_cashplus">Daftar fitur lainnya di cashplus</string>
    <string name="other">Lainnya</string>
    <string name="menu_credit_electronic">Pulsa</string>
    <string name="menu_data">Data</string>
    <string name="menu_telephone">Telepon</string>
    <string name="menu_short_message_service">SMS</string>
    <string name="menu_omni">OMNI</string>
    <string name="cashplus_saldo">Deposit Cashplus</string>
    <string name="qris_saldo">Deposit QRIS</string>
    <string name="top_up_qris_saldo">Isi Saldo QRIS</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="choose_e_wallet">Pilih E-Wallet</string>
    <string name="choose_purchase">Pilih Pembelian</string>
    <string name="choose_nominal">Pilih nominal</string>
    <string name="input_manual">Manual input</string>
    <string name="find_voucher_game">Cari Voucher Game</string>
    <string name="trending_now">Trending Sekarang</string>
    <string name="popular_game" tools:ignore="Typos">Game Populer</string>
    <string name="interest_game">Game Menarik</string>
    <string name="other_game">Yang Lainnya</string>
    <string name="result_search">Hasil Pencarian</string>
    <string name="label_banner1">Info dan Promo Spesial</string>
    <string name="label_holiday">Saatnya Liburan</string>
    <string name="label_shop">Saatnya Belanja</string>
    <string name="label_banner2">CashGold</string>
    <string name="label_banner3">Go To Mekka</string>
    <string name="show_all">Lihat Semua</string>
    <string name="show_voucher">Lihat Voucher</string>
    <string name="customer_service">Customer Service</string>
    <string name="any_question_more">Untuk pertanyaan lebih lanjut silahkan kontak customer service kami.</string>
    <string name="wa_cs">WhatsApp Customer Service</string>
    <string name="telegram_cs">Telegram Customer Service</string>
    <string name="important_info">Informasi Penting</string>
    <string name="important_info_desc">Jangan memberikan Kode PIN, Kode OTP serta kode lainnya kepada siapapun dan dengan alasan apapun. </string>
    <string name="topup_refill">Isi Ulang</string>
    <string name="topup_refill_desc">Dengan cashplus isi ulang jadi lebih simpel.</string>
    <string name="bill">Tagihan</string>
    <string name="bill_desc">Solusi permudah bayar tagihanmu dalam 1 aplikasi.</string>
    <string name="entertainment">Hiburan</string>
    <string name="entertainment_desc">Cashplus memenuhi kebutuhan hiburan kamu.</string>
    <string name="travel">Travel</string>
    <string name="travel_desc">Travel jadi lebih mudah dan hemat.</string>
    <string name="cinema">Bioskop</string>
    <string name="voucher">Voucher</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="e_wallet_desc">Isi ulang semua e-wallet cuma di cashplus.</string>
    <string name="game">Game</string>
    <string name="game_desc">Topup game favoritmu di cashplus.</string>
    <string name="choose_cash_transfer">Pilih mau transfer kemana?</string>
    <string name="local_bank">Bank Lokal</string>
    <string name="local_bank_desc">Transfer ke bank lokal pilihanmu</string>
    <string name="global_bank">Luar Negeri</string>
    <string name="global_bank_desc">Transfer ke 56+ negara lebih cepat</string>
    <string name="processing_agency_data">Mengolah data keagenan anda</string>
    <string name="transfer_balance">Transfer\nDeposit</string>
    <string name="nearest_agent">Agen Terdekat</string>
    <string name="receive_balance">Terima\nDeposit</string>
    <string name="qr_transfer">Transfer via\nQR</string>
    <string name="grather_than_3">Usia ≥ 3 th</string>
    <string name="less_than_3">Usia &lt; 3 th</string>
    <string name="less_than_2">Usia &lt; 2 th</string>
    <string name="choose_provider">Pilih Provider</string>
    <string name="bpjs_number">Nomor BPJS</string>
    <string name="customer_name">Nama Pelanggan</string>
    <string name="customer_number">Nomor Pelanggan</string>
    <string name="input_referral">Masukkan kode referral</string>
    <string name="referral_required">Kode referral perlu diisi</string>
    <string name="input_name_account_required">Nama akun perlu diisi</string>
    <string name="input_name_owner_required">Nama owner perlu diisi</string>
    <string name="input_contains_number_or_symbol">Nama tidak boleh mengandung angka atau simbol</string>
    <string name="date_of_birth_not_valid">Tanggal lahir yang kamu masukkan tidak valid.\nContoh 01 Januari 1997</string>
    <string name="input_password_required">Kata sandi perlu diisi</string>
    <string name="password_change_successfully">Kata sandi berhasil diubah</string>
    <string name="input_customer_number">Masukkan nomor pelanggan</string>
    <string name="how_much_top_up_saldo">Mau isi saldo berapa?</string>
    <string name="input_bpjs_number">Masukkan nomor BPJS</string>
    <string name="customer_id">ID Pelanggan</string>
    <string name="input_customer_id">Masukkan ID Pelanggan</string>
    <string name="zone_id">ID Zona</string>
    <string name="input_zone_id">Masukkan ID Zona</string>
    <string name="username_customer">Username Pelanggan</string>
    <string name="input_username_customer">Masukkan Username Pelanggan</string>
    <string name="server_name">Server</string>
    <string name="input_server">Pilih server</string>
    <string name="payment_of_year">Tahun Pembayaran</string>
    <string name="buy_minimum_unit_product_format">Untuk minimal pembelian saldo %1$s Rp 1,000</string>
    <string name="buy_minimum_required">Minimal pembelian harus Rp 1,000</string>
    <string name="buy_maximum_required">Limit pembelian Rp 20,000,000</string>
    <string name="purchase_dana_format">Saldo DANA %1$s</string>
    <string name="nominal_payment">Nominal Pembayaran</string>
    <string name="summary_transaction">Rincian Transaksi</string>
    <string name="pulsa">Pulsa</string>
    <string name="data_package">Paket Data</string>
    <string name="electric">Listrik</string>
    <string name="token_pln">Token</string>
    <string name="detail_payment">Detail Pembayaran</string>
    <string name="generate_file_failed">Gagal generate file! Silahkan coba lagi</string>
    <string name="item">Item</string>
    <string name="share">Bagikan</string>
    <string name="region">Wilayah</string>
    <string name="choose_region">Pilih Wilayah</string>
    <string name="exception_network">Periksa koneksi WiFi atau data seluler anda dan coba lagi</string>
    <string name="exception_gson">Terjadi kesalahan, silahkan coba lagi</string>
    <string name="not_yet_available">Belum tersedia</string>
    <string name="exception_maintenance">Sedang dilakukan pemeliharaan (Maintenance), silahkan coba lagi nanti</string>
    <string name="banner_image">Gambar Banner</string>
    <string name="product_logo">logo product</string>
    <string name="price_with_label">harga: %1$s</string>
    <string name="room_and_duration_hotel">%1$s Kamar, %2$s Malam</string>
    <string name="location_hotel">%1$s, %2$s</string>
    <string name="checkin_checkout_hotel">Checkin: %1$s \nCheckout: %2$s</string>
    <string name="price_discounts">%1$.2f%%</string>
    <string name="hotel_img">gambar hotel</string>
    <string name="hotel_type">HOTEL</string>
    <string name="btn_back">button back</string>
    <string name="add_address">Tambah Alamat</string>
    <string name="forgot_pin_question">Lupa PIN?</string>
    <string name="forgot_pin">Lupa PIN</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="email_configuration">Konfigurasi Email</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="change_pin">Ubah PIN</string>
    <string name="e_kyc">E-KYC</string>
    <string name="setting">Pengaturan</string>
    <string name="pin_currently">PIN Lama</string>
    <string name="new_pin">PIN Baru</string>
    <string name="input_new_pin">Masukkan PIN baru</string>
    <string name="confirm_new_pin">Konfirmasi PIN Baru</string>
    <string name="input_confirm_new_pin">Masukkan ulang PIN baru</string>
</resources>