<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFC"
    tools:context=".ui.pages.others.settings.pin.ChangePinWithoutLastPinActivity">

    <com.pasukanlangit.id.core.presentation.components.AppBarWithIconBackView
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_app_bar"
        app:title="@string/forgot_pin"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/label_pin_baru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="13sp"
        android:text="@string/new_pin"
        android:textColor="#3C4D5F"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
        android:id="@+id/input_new_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginHorizontal="@dimen/dimen_16"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/icon_lock_password_line"
        app:startIconTint="?colorPrimaryVariant"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/label_pin_baru">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_pin"
            android:layout_width="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:imeOptions="actionNext"
            android:hint="@string/input_new_pin"
            style="@style/InputWithBorderGrey" />
    </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginStart="@dimen/dimen_16"
        android:fontFamily="@font/poppins_regular"
        android:textSize="13sp"
        android:text="@string/confirm_new_pin"
        android:textColor="#3C4D5F"
        app:layout_constraintTop_toBottomOf="@+id/input_new_pin" />

    <com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout
        android:id="@+id/input_confirm_new_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4"
        android:layout_marginHorizontal="@dimen/dimen_16"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/icon_lock_password_line"
        app:startIconTint="?colorPrimaryVariant"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/textView14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_pin_confirmation"
            android:layout_width="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:imeOptions="actionNext"
            android:hint="@string/input_confirm_new_pin"
            style="@style/InputWithBorderGrey" />
    </com.pasukanlangit.id.core.presentation.components.CustomTextInputLayout>

    <Button
        android:id="@+id/btn_save_pin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_38"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:background="@drawable/background_button_state"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:textColor="@drawable/color_indicator_state"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/input_confirm_new_pin" />
</androidx.constraintlayout.widget.ConstraintLayout>